kotlin-parser/src/test/semlang/validatorTests/fail/nameConflict4.sem

// Conflict with a native struct
function Unicode.String(): Integer {
    Integer."100"
}
